removed unused routes: -'/' -'/all' -'/movie/:title' -'/publisher/:publisher' -'/top_critic/:status'
and added docs with swagger for the others
